--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "devDependencies": {
     "vite": "^6.2.0"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "glob": "^11.0.1",
     "tailwindcss": "^4.1.4"
   }
 }
